--- a/css/index.scss
+++ b/css/index.scss
@@ -1541,6 +1541,15 @@ body .features {
   @include media("mobile") {
     text-align: center;
   }
+  .foot {
+    color: white;
+    padding: 30px 0px;
+    border-top: 1px solid #444;
+    text-align: center;
+    margin: 0px {
+      top: 50px;
+    }
+  }
 }
 // end footer
 @include keyF(changeBack) {
