--- a/css/index.scss
+++ b/css/index.scss
@@ -761,9 +761,8 @@ body .features {
       position: relative;
       counter-increment: services;
       transition: 0.5s;
-
       box-shadow: 0px 12px 20px 0px rgba(black, 0.13),
-        0px 2px 4px 0px rgba(rgb(196, 50, 50), 0.12);
+        0px 2px 4px 0px rgba(black, 0.12);
       i {
         color: #d5d5d5;
         display: block;
