--- a/css/_var.scss
+++ b/css/_var.scss
@@ -98,13 +98,13 @@ $them: "dark";
 
 // hover card
 @mixin cardhover($elementName, $rotateDeg, $rotateWay) {
-  #{$elementName} {
+  .#{$elementName} {
     position: relative;
     width: 300px;
     height: 400px;
     transition: 0.5s;
     transform-style: preserve-3d;
-    perspective: 1000px;
+    transform: perspective(1000px);
     .card1,
     .card2 {
       position: absolute;
