--- a/css/index.css
+++ b/css/index.css
@@ -120,7 +120,7 @@ body {
 }
 @media (max-width:767px) {
   .main-anim {
-    font-size: 20px;
+    font-size: 15px;
   }
 }
 
@@ -1068,7 +1068,8 @@ body .features .container .passion .text :is(p, h2)::selection {
   width: 100%;
 }
 .services .container .box:hover {
-  transform: translateY(-10px);
+  transform: translateY(-10px) !important;
+  box-shadow: 0px 21px 20px 0px rgba(0, 0, 0, 0.13), 0px 2px 4px 0px rgba(0, 0, 0, 0.12);
 }
 
 .our-skills {
@@ -1573,6 +1574,7 @@ body .features .container .passion .text :is(p, h2)::selection {
   background-image: url(../imgs/stats.jpg);
   padding: 100px 0px;
   position: relative;
+  overflow: hidden;
 }
 .stats::before {
   content: "";
