edit header overflow

--- a/css/index.css
+++ b/css/index.css
@@ -176,6 +176,7 @@ body .header {
   position: relative;
   height: 70px;
   text-transform: capitalize;
+  overflow: hidden;
 }
 @media (max-width:767px) {
   body .header {
